Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
28b42fcdd (dev), 0b832fd03 (6.8)
Description
The code snippet on https://doc.qt.io/qt-6/qml-qtgraphs-graphsview.html contains an invalid GraphTheme code.
Attachments
For Gerrit Dashboard: QTBUG-130649 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
600451,2 | Update GraphsView documentation | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
600610,2 | Update GraphsView documentation | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |