Update GraphsView documentation

Update the GraphsTheme changes and axis locations.

Task-number: QTBUG-130649
Change-Id: I35c4abcc68b5fd17866f06059d1eff356601c6fd
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
(cherry picked from commit 28b42fcdd64d80746fa3437df32ba4def9d5f9ff)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>