src/doc/snippets/doc_src_qmlgraphs.cpp
@@ -168,23 +168,25 @@ import QtGraphs
 
 GraphsView {
     anchors.fill: parent
-    theme: GraphTheme {
-        colorTheme: GraphTheme.ColorThemeDark
-        gridMajorBarsColor: "#ccccff"
-        gridMinorBarsColor: "#eeeeff"
-        axisYMajorColor: "#ccccff"
-        axisYMinorColor: "#eeeeff"
+    theme: GraphsTheme {
+        colorScheme: GraphsTheme.ColorScheme.Dark
+        seriesColors: ["#E0D080", "#B0A060"]
+        borderColors: ["#807040", "#706030"]
+        grid.mainColor: "#ccccff"
+        grid.subColor: "#eeeeff"
+        axisY.mainColor: "#ccccff"
+        axisY.subColor: "#eeeeff"
+    }
+    axisX: BarCategoryAxis {
+        categories: ["2023", "2024", "2025"]
+        lineVisible: false
+    }
+    axisY: ValueAxis {
+        min: 0
+        max: 10
+        subTickCount: 4
     }
     BarSeries {
-        axisX: BarCategoryAxis {
-            categories: ["2023", "2024", "2025"]
-            lineVisible: false
-        }
-        axisY: ValueAxis {
-            min: 0
-            max: 10
-            minorTickCount: 4
-        }
         BarSet {
             values: [7, 6, 9]
         }
